# rserve-client

./: CMakeLists.txt  LICENSE  Makefile  README.md  cvector.h  rexp.c  rexp.h  rlist.c  rlist.h  rserve.c  rserve.h  utilities.c  utilities.h
doc/: qap1.md
test/: demo.c  ocap.c  test.c
test/rserve/: ocap.R  password.txt  server.R
